<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_principal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/add_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_add"
                android:contentDescription="@string/hello_world" />

        <ImageView
                android:id="@+id/login_logout_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/black"
                android:padding="7dp"
                android:tag="login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login"
                app:tint="@color/grey"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/hello_world" />

        <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/black"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <EditText
                    android:id="@+id/recherche_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:backgroundTint="@color/light_grey"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:hint="@string/rechercher"
                    android:inputType="textPersonName"
                    android:textColor="@color/light_grey"
                    android:textColorHint="@color/light_grey"
                    android:textSize="30sp"
                    tools:targetApi="lollipop" />

            <ImageView
                    android:id="@+id/recherche_button"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_search"
                    android:contentDescription="@string/hello_world" />

            <ImageView
                    android:id="@+id/tag_button"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_more"
                    android:contentDescription="@string/hello_world" />

        </LinearLayout>

        <GridView
                android:id="@+id/images_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="@color/white"
                android:gravity="center"
                android:numColumns="2"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
                android:id="@+id/tags_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/login_logout_button"
                app:layout_constraintStart_toEndOf="@+id/add_button"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <RadioButton
                    android:id="@+id/tag_recherche"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:background="@color/grey"
                    android:buttonTint="@color/white"
                    android:text="@string/rechercher"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    tools:targetApi="lollipop" />

            <RadioButton
                    android:id="@+id/tag_my_pictures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:buttonTint="@color/white"
                    android:text="@string/my_pictures"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    tools:targetApi="lollipop" />

            <RadioButton
                    android:id="@+id/tag_my_favorites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:buttonTint="@color/white"
                    android:text="@string/my_favorites"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    tools:targetApi="lollipop" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_plein_ecran"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/layout_plein_ecran_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:contentDescription="@string/hello_world"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/layout_plein_ecran_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/hello_world"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                app:tint="@color/grey" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
